--- a/VacationManager/VacationManager/Views/Projects/Details.cshtml
+++ b/VacationManager/VacationManager/Views/Projects/Details.cshtml
@@ -10,21 +10,63 @@
     <h4>Project</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
     </dl>
 </div>
+
+<h4>Teams</h4>
+
+@if (Model.Teams != null && Model.Teams.Any())
+{
+    <ul>
+        @foreach (var team in Model.Teams)
+        {
+            <li>
+                <span>@team.Name</span>
+                <div style="display: inline-block;">
+                    <form asp-action="RemoveTeam" asp-controller="Projects" onsubmit="return confirm('Are you sure you want to remove this team?');">
+                        <input type="hidden" name="projectId" value="@Model.Id" />
+                        <input type="hidden" name="teamId" value="@team.Id" />
+                        <button type="submit" class="btn btn-link">Remove</button>
+                    </form>
+                </div>
+            </li>
+        }
+    </ul>
+}
+else
+{
+    <p>No teams are working on this project.</p>
+}
+
+<h4>Add Team</h4>
+<form asp-action="AddTeam" asp-controller="Projects">
+    <input type="hidden" name="projectId" value="@Model.Id" />
+    <select name="teamId">
+        @foreach (var team in ViewBag.TeamsNotAssigned)
+        {
+            <option value="@team.Id">@team.Name</option>
+        }
+    </select>
+    <button type="submit">Add Team</button>
+</form>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Scripts {
+
+}
