--- a/VacationManager/VacationManager/Views/Users/Delete.cshtml
+++ b/VacationManager/VacationManager/Views/Users/Delete.cshtml
@@ -18,12 +18,6 @@
             @Html.DisplayFor(model => model.Username)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
         <dd class = "col-sm-10">
@@ -35,35 +29,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RoleId)
+        <dt class="col-sm-2">
+            Role
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RoleId)
+        <dd class="col-sm-10">
+            @ViewData["RoleName"]
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TeamId)
+        <dt class="col-sm-2">
+            Team
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TeamId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsAway)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsAway)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsHalfDay)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsHalfDay)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsSickLeave)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsSickLeave)
+        <dd class="col-sm-10">
+            @ViewData["TeamName"]
         </dd>
     </dl>
     
