--- a/VacationManager/VacationManager/Views/Users/Edit.cshtml
+++ b/VacationManager/VacationManager/Views/Users/Edit.cshtml
@@ -13,12 +13,12 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="form-group" style="display: none;">
                 <label asp-for="Username" class="control-label"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="display: none;">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
@@ -33,27 +33,27 @@
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="display: none;">
                 <label asp-for="RoleId" class="control-label"></label>
                 <input asp-for="RoleId" class="form-control" />
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="display: none;">
                 <label asp-for="TeamId" class="control-label"></label>
                 <input asp-for="TeamId" class="form-control" />
                 <span asp-validation-for="TeamId" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            <div class="form-group form-check" style="display: none;">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsAway" /> @Html.DisplayNameFor(model => model.IsAway)
                 </label>
             </div>
-            <div class="form-group form-check">
+            <div class="form-group form-check" style="display: none;">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsHalfDay" /> @Html.DisplayNameFor(model => model.IsHalfDay)
                 </label>
             </div>
-            <div class="form-group form-check">
+            <div class="form-group form-check" style="display: none;">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsSickLeave" /> @Html.DisplayNameFor(model => model.IsSickLeave)
                 </label>
