--- a/VacationManager/VacationManager/Views/Users/Details.cshtml
+++ b/VacationManager/VacationManager/Views/Users/Details.cshtml
@@ -17,12 +17,6 @@
             @Html.DisplayFor(model => model.Username)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
         <dd class = "col-sm-10">
@@ -66,6 +60,80 @@
         </dd>
     </dl>
 </div>
+
+<div>
+    @if (Model.RoleId != 1)
+    {
+        @if (ViewData["TeamOptions"] is IEnumerable<SelectListItem> teamOptions && teamOptions.Any())
+        {
+            <div>
+                <h4>Update Team</h4>
+                <form asp-action="UpdateTeam" method="post">
+                    <input type="hidden" asp-for="Id" />
+                    <div class="form-group" style="display: none;">
+                        <label asp-for="Username" class="control-label"></label>
+                        <input asp-for="Username" class="form-control" />
+                        <span asp-validation-for="Username" class="text-danger"></span>
+                    </div>
+                    <div class="form-group" style="display: none;">
+                        <label asp-for="Password" class="control-label"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group" style="display: none;">
+                        <label asp-for="FirstName" class="control-label"></label>
+                        <input asp-for="FirstName" class="form-control" />
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group" style="display: none;">
+                        <label asp-for="LastName" class="control-label"></label>
+                        <input asp-for="LastName" class="form-control" />
+                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group" style="display: none;">
+                        <label asp-for="RoleId" class="control-label"></label>
+                        <input asp-for="RoleId" class="form-control" />
+                        <span asp-validation-for="RoleId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group form-check" style="display: none;">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="IsAway" /> @Html.DisplayNameFor(model => model.IsAway)
+                        </label>
+                    </div>
+                    <div class="form-group form-check" style="display: none;">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="IsHalfDay" /> @Html.DisplayNameFor(model => model.IsHalfDay)
+                        </label>
+                    </div>
+                    <div class="form-group form-check" style="display: none;">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="IsSickLeave" /> @Html.DisplayNameFor(model => model.IsSickLeave)
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="TeamId" class="control-label">Teams:</label>
+                        <select asp-for="TeamId" class="form-control">
+                            @foreach (var option in teamOptions)
+                            {
+                                <option value="@option.Value">@option.Text</option>
+                            }
+                        </select>
+                        <span asp-validation-for="TeamId" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </form>
+            </div>
+        }
+        else
+        {
+            <div>
+                <h4>Update Team</h4>
+                <p>No teams available</p>
+            </div>
+        }
+    }
+</div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
