--- a/VacationManager/VacationManager/Views/Shared/_Layout.cshtml
+++ b/VacationManager/VacationManager/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="VacationDays" asp-action="Index">Vacation Days</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
