--- a/VacationManager/VacationManager/Views/LeaveRequests/Create.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Create.cshtml
@@ -42,9 +42,9 @@
                         Paid
                     </label>) Vacation leave
                 </p>
-                <p>from <input type="date" id="startDate" name="startDate" asp-for="StartDate"
-                   min="@DateTime.Today.AddDays(1).ToString("yyyy-MM-dd")"> through <input type="date" id="endDate" name="endDate" asp-for="EndDate"
-                   min="@DateTime.Today.AddDays(1).ToString("yyyy-MM-dd")"></p>
+                <p>from <input type="date" id="startDate" name="startDate" asp-for="StartDate" 
+                    min="@DateTime.Today.AddDays(1).ToString("yyyy-MM-dd")"> through <input type="date" id="endDate" name="endDate" asp-for="EndDate" 
+                    min="@DateTime.Today.AddDays(1).ToString("yyyy-MM-dd")"></p>                    
                 <div class="form-group">
                     <label asp-for="IsHalfDay">This is a request for a half-day leave.</label>
                     <input type="checkbox" asp-for="IsHalfDay" name="isHalfDay">
@@ -97,6 +97,11 @@
         <div class="form-group form-check" style="display: none;">
             <label class="form-check-label">
                 <input class="form-check-input" asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
+            </label>
+        </div>
+        <div class="form-group form-check" style="display: none;">
+            <label class="form-check-label">
+                <input class="form-check-input" asp-for="IsCompleted" id="normalIsCompleted" /> @Html.DisplayNameFor(model => model.IsCompleted)
             </label>
         </div>
 
@@ -163,6 +168,11 @@
                 <input asp-for="ApproverId" class="form-control" id="medical-ApproverId" />
                 <span asp-validation-for="ApproverId" class="text-danger"></span>
             </div>
+            <div class="form-group form-check" style="display: none;">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="IsCompleted" id="medical-IsCompleted" checked="true" /> @Html.DisplayNameFor(model => model.IsCompleted)
+                </label>
+            </div>
         </div>
 
         <!-- Hidden fields -->
@@ -174,7 +184,7 @@
             <input type="submit" value="Create" class="btn btn-primary" id="medicalButton" />
         </div>
     </form>
-   @*  <button id="back-button">Back</button> *@
+    @*  <button id="back-button">Back</button> *@
 </div>
 
 <div>
