--- a/VacationManager/VacationManager/Views/LeaveRequests/Delete.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Delete.cshtml
@@ -71,6 +71,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ApproverId)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IsCompleted)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IsCompleted)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
