--- a/VacationManager/VacationManager/Views/LeaveRequests/Edit.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Edit.cshtml
@@ -63,6 +63,11 @@
                 <input asp-for="ApproverId" class="form-control" />
                 <span asp-validation-for="ApproverId" class="text-danger"></span>
             </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="IsCompleted" /> @Html.DisplayNameFor(model => model.IsCompleted)
+                </label>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
