Handle Request Approval

--- a/VacationManager/VacationManager/Views/LeaveRequests/Create.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Create.cshtml
@@ -54,13 +54,13 @@
                     <div class="form-group">
                         <label for="currentYearDays">Days from <span id="currentYearLabel"></span>:</label>
                         <input type="number" id="currentYearDays" name="currentYearDays" class="form-control"
-                               max="@ViewBag.LeftDaysThisYear" min="0" step="1" style="width: 70px;" value="0">
+                               max="@ViewBag.LeftDaysThisYear" min="0" step="1" style="width: 70px;" value="0" readonly>
                     </div>
                     and
                     <div class="form-group">
                         <label for="previousYearDays">Days from <span id="previousYearLabel"></span>:</label>
                         <input type="number" id="previousYearDays" name="previousYearDays" class="form-control"
-                               max="@ViewBag.LeftDaysPreviousYear" min="0" step="1" style="width: 70px;" value="0">
+                               max="@ViewBag.LeftDaysPreviousYear" min="0" step="1" style="width: 70px;" value="0" readonly>
                     </div>
                 </div>
             </div>
