Update Edit validation

--- a/VacationManager/VacationManager/Views/LeaveRequests/Create.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Create.cshtml
@@ -324,7 +324,7 @@
 
                 if (isPaidCheckbox.checked && (leftPrevD < A || leftCurrD < B)) {
                     submitButton.style.display = 'none';
-                    alert('You do not have enough vacation days left!');
+                    alert('You do not have enough vacation days available to cover the requested period.');
                 } else {
                     submitButton.style.display = 'block';
                 }
